mise en place du liseret et affichage vertical en type inline-block

--- a/cv.html
+++ b/cv.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
+		<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="cv.css" />
+		<link rel="stylesheet" href="sources/cv.css" />
 		<title>Le CV de Kullipon</title>
 	</head>
 	<body>
-		<h1>Kullipon</h1>
-		<p id="sousTitre">Un mélange de Chris et de Japon</p>
-		<p><img id ="image"src="japan.jpg" alt="Japan" title ="Japan"/>
+		<div id="main_div">
+		<header>
+			<div id ="titre">
+				<h1>Kullipon</h1>
+				<p id="sousTitre">Un mélange de Chris et de Japon</p>
+				</div>
+				<div id="block_logo"><img id="logo" src="sources/kullipon_petit.png" alt="logo kullipon" /></div>
+			</header>
+			<section>
+		<div id = "liseret"></div>
+		<div class ="sub">
 		<h2>Mon expérience</h2>
 		<p>
 			<ul>
@@ -18,6 +26,8 @@
 				<li><strong>De 2001 à 2002:</strong> BTS en Informatique de Gestion</li>
 			</ul>
 		</p>
+		</div>
+		<div class="sub">
 		<h2>Mes compétences</h2>
 		<p>
 		<ul>
@@ -26,8 +36,14 @@
 			<li>Quelques conaissances en PHP</li>
 		</ul>
 		</p>
+		</div>
+		<div class="sub">
 		<h2>Ma formation</h2>
-		<p>Le BTS était il y a longtemps alors j'ai beaucoup oublié. Grace à <strong>OpenClassRooms</strong> je revise <strong>et</strong> j'apprends !</p>
-	<p id = "bottom"></p>
+		<p>Le BTS était il y a si longtemps que j'ai oublié beaucoup de choses. Grace à <strong>OpenClassRooms</strong>
+		 je révise <strong>et</strong> j'apprends !</p>
+		</div>
+		 </section>
+	<footer><p>Contact: <a href="#" alt="contact">Kullipon</a></p></footer>
+	</div>
 	</body>
 </html>
